# dev/go/routers.go
@@ -375,10 +375,157 @@ func init() {
 	)
 
 	mockesi.NewRoute(
+		"GetCorporationsCorporationId",
+		"Get",
+		"/dev/corporations/{corporation_id}/",
+		GetCorporationsCorporationId,
+	)
+
+	mockesi.NewRoute(
+		"GetCorporationsCorporationIdAlliancehistory",
+		"Get",
+		"/dev/corporations/{corporation_id}/alliancehistory/",
+		GetCorporationsCorporationIdAlliancehistory,
+	)
+
+	mockesi.NewRoute(
+		"GetCorporationsCorporationIdBlueprints",
+		"Get",
+		"/dev/corporations/{corporation_id}/blueprints/",
+		GetCorporationsCorporationIdBlueprints,
+	)
+
+	mockesi.NewRoute(
+		"GetCorporationsCorporationIdContainersLogs",
+		"Get",
+		"/dev/corporations/{corporation_id}/containers/logs/",
+		GetCorporationsCorporationIdContainersLogs,
+	)
+
+	mockesi.NewRoute(
+		"GetCorporationsCorporationIdDivisions",
+		"Get",
+		"/dev/corporations/{corporation_id}/divisions/",
+		GetCorporationsCorporationIdDivisions,
+	)
+
+	mockesi.NewRoute(
+		"GetCorporationsCorporationIdFacilities",
+		"Get",
+		"/dev/corporations/{corporation_id}/facilities/",
+		GetCorporationsCorporationIdFacilities,
+	)
+
+	mockesi.NewRoute(
+		"GetCorporationsCorporationIdIcons",
+		"Get",
+		"/dev/corporations/{corporation_id}/icons/",
+		GetCorporationsCorporationIdIcons,
+	)
+
+	mockesi.NewRoute(
+		"GetCorporationsCorporationIdMedals",
+		"Get",
+		"/dev/corporations/{corporation_id}/medals/",
+		GetCorporationsCorporationIdMedals,
+	)
+
+	mockesi.NewRoute(
+		"GetCorporationsCorporationIdMedalsIssued",
+		"Get",
+		"/dev/corporations/{corporation_id}/medals/issued/",
+		GetCorporationsCorporationIdMedalsIssued,
+	)
+
+	mockesi.NewRoute(
+		"GetCorporationsCorporationIdMembers",
+		"Get",
+		"/dev/corporations/{corporation_id}/members/",
+		GetCorporationsCorporationIdMembers,
+	)
+
+	mockesi.NewRoute(
+		"GetCorporationsCorporationIdMembersLimit",
+		"Get",
+		"/dev/corporations/{corporation_id}/members/limit/",
+		GetCorporationsCorporationIdMembersLimit,
+	)
+
+	mockesi.NewRoute(
+		"GetCorporationsCorporationIdMembersTitles",
+		"Get",
+		"/dev/corporations/{corporation_id}/members/titles/",
+		GetCorporationsCorporationIdMembersTitles,
+	)
+
+	mockesi.NewRoute(
+		"GetCorporationsCorporationIdMembertracking",
+		"Get",
+		"/dev/corporations/{corporation_id}/membertracking/",
+		GetCorporationsCorporationIdMembertracking,
+	)
+
+	mockesi.NewRoute(
+		"GetCorporationsCorporationIdRoles",
+		"Get",
+		"/dev/corporations/{corporation_id}/roles/",
+		GetCorporationsCorporationIdRoles,
+	)
+
+	mockesi.NewRoute(
+		"GetCorporationsCorporationIdRolesHistory",
+		"Get",
+		"/dev/corporations/{corporation_id}/roles/history/",
+		GetCorporationsCorporationIdRolesHistory,
+	)
+
+	mockesi.NewRoute(
 		"GetCorporationsCorporationIdShareholders",
 		"Get",
 		"/dev/corporations/{corporation_id}/shareholders/",
 		GetCorporationsCorporationIdShareholders,
+	)
+
+	mockesi.NewRoute(
+		"GetCorporationsCorporationIdStandings",
+		"Get",
+		"/dev/corporations/{corporation_id}/standings/",
+		GetCorporationsCorporationIdStandings,
+	)
+
+	mockesi.NewRoute(
+		"GetCorporationsCorporationIdStarbases",
+		"Get",
+		"/dev/corporations/{corporation_id}/starbases/",
+		GetCorporationsCorporationIdStarbases,
+	)
+
+	mockesi.NewRoute(
+		"GetCorporationsCorporationIdStarbasesStarbaseId",
+		"Get",
+		"/dev/corporations/{corporation_id}/starbases/{starbase_id}/",
+		GetCorporationsCorporationIdStarbasesStarbaseId,
+	)
+
+	mockesi.NewRoute(
+		"GetCorporationsCorporationIdStructures",
+		"Get",
+		"/dev/corporations/{corporation_id}/structures/",
+		GetCorporationsCorporationIdStructures,
+	)
+
+	mockesi.NewRoute(
+		"GetCorporationsCorporationIdTitles",
+		"Get",
+		"/dev/corporations/{corporation_id}/titles/",
+		GetCorporationsCorporationIdTitles,
+	)
+
+	mockesi.NewRoute(
+		"GetCorporationsNpccorps",
+		"Get",
+		"/dev/corporations/npccorps/",
+		GetCorporationsNpccorps,
 	)
 
 	mockesi.NewRoute(
