# v5/api/swagger.yaml
@@ -2,7 +2,7 @@
 swagger: "2.0"
 info:
   description: "An OpenAPI for EVE Online"
-  version: "1.7.15"
+  version: "1.8.2"
   title: "EVE Swagger Interface"
 host: "esi.evetech.net"
 basePath: "/v5"
@@ -13,6 +13,131 @@ consumes:
 produces:
 - "application/json"
 paths:
+  /characters/{character_id}/:
+    get:
+      tags:
+      - "Character"
+      summary: "Get character's public information"
+      description: "Public information about a character\n\n---\nAlternate route:\
+        \ `/dev/characters/{character_id}/`\n\nAlternate route: `/latest/characters/{character_id}/`\n\
+        \nAlternate route: `/legacy/characters/{character_id}/`\n\n---\nThis route\
+        \ is cached for up to 86400 seconds"
+      operationId: "get_characters_character_id"
+      parameters:
+      - name: "character_id"
+        in: "path"
+        description: "An EVE character ID"
+        required: true
+        type: "integer"
+        minimum: 1
+        format: "int32"
+        x-exportParamName: "CharacterId"
+      - name: "datasource"
+        in: "query"
+        description: "The server name you would like data from"
+        required: false
+        type: "string"
+        default: "tranquility"
+        enum:
+        - "tranquility"
+        x-exportParamName: "Datasource"
+      - name: "If-None-Match"
+        in: "header"
+        description: "ETag from a previous request. A 304 will be returned if this\
+          \ matches the current ETag"
+        required: false
+        type: "string"
+        x-exportParamName: "IfNoneMatch"
+      responses:
+        200:
+          description: "Public data for the given character"
+          schema:
+            $ref: "#/definitions/get_characters_character_id_ok"
+          examples:
+            application/json:
+              birthday: "2015-03-24T11:37:00Z"
+              bloodline_id: 3
+              corporation_id: 109299958
+              description: ""
+              gender: "male"
+              name: "CCP Bartender"
+              race_id: 2
+              title: "All round pretty awesome guy"
+          headers:
+            Cache-Control:
+              type: "string"
+              description: "The caching mechanism used"
+            ETag:
+              type: "string"
+              description: "RFC7232 compliant entity tag"
+            Expires:
+              type: "string"
+              description: "RFC7231 formatted datetime string"
+            Last-Modified:
+              type: "string"
+              description: "RFC7231 formatted datetime string"
+        304:
+          description: "Not modified"
+          headers:
+            Cache-Control:
+              type: "string"
+              description: "The caching mechanism used"
+            ETag:
+              type: "string"
+              description: "RFC7232 compliant entity tag"
+            Expires:
+              type: "string"
+              description: "RFC7231 formatted datetime string"
+            Last-Modified:
+              type: "string"
+              description: "RFC7231 formatted datetime string"
+        400:
+          description: "Bad request"
+          schema:
+            $ref: "#/definitions/bad_request"
+          examples:
+            application/json:
+              error: "Bad request message"
+        404:
+          description: "Character not found"
+          schema:
+            $ref: "#/definitions/get_characters_character_id_not_found"
+          examples:
+            application/json:
+              error: "Not found message"
+        420:
+          description: "Error limited"
+          schema:
+            $ref: "#/definitions/error_limited"
+          examples:
+            application/json:
+              error: "Error limited message"
+        500:
+          description: "Internal server error"
+          schema:
+            $ref: "#/definitions/internal_server_error"
+          examples:
+            application/json:
+              error: "Internal server error message"
+        503:
+          description: "Service unavailable"
+          schema:
+            $ref: "#/definitions/service_unavailable"
+          examples:
+            application/json:
+              error: "Service unavailable message"
+        504:
+          description: "Gateway timeout"
+          schema:
+            $ref: "#/definitions/gateway_timeout"
+          examples:
+            application/json:
+              error: "Gateway timeout message"
+      x-alternate-versions:
+      - "dev"
+      - "latest"
+      - "legacy"
+      x-cached-seconds: 86400
   /characters/{character_id}/assets/:
     get:
       tags:
@@ -184,7 +309,8 @@ paths:
       - "Character"
       summary: "Calculate a CSPA charge cost"
       description: "Takes a source character ID in the url and a set of target character\
-        \ ID's in the body, returns a CSPA charge cost\n\n---\nAlternate route: `/dev/characters/{character_id}/cspa/`\n"
+        \ ID's in the body, returns a CSPA charge cost\n\n---\nAlternate route: `/dev/characters/{character_id}/cspa/`\n\
+        \nAlternate route: `/latest/characters/{character_id}/cspa/`\n"
       operationId: "post_characters_character_id_cspa"
       parameters:
       - name: "character_id"
@@ -289,6 +415,7 @@ paths:
         - "esi-characters.read_contacts.v1"
       x-alternate-versions:
       - "dev"
+      - "latest"
   /characters/{character_id}/notifications/:
     get:
       tags:
@@ -602,8 +729,8 @@ paths:
       - "Corporation"
       summary: "Get corporation information"
       description: "Public information about a corporation\n\n---\nAlternate route:\
-        \ `/latest/corporations/{corporation_id}/`\n\n---\nThis route is cached for\
-        \ up to 3600 seconds\n\n---\n[Diff of the upcoming changes](https://esi.evetech.net/diff/v5/dev/#GET-/corporations/{corporation_id}/)"
+        \ `/dev/corporations/{corporation_id}/`\n\nAlternate route: `/latest/corporations/{corporation_id}/`\n\
+        \n---\nThis route is cached for up to 3600 seconds"
       operationId: "get_corporations_corporation_id"
       parameters:
       - name: "corporation_id"
@@ -719,6 +846,7 @@ paths:
             application/json:
               error: "Gateway timeout message"
       x-alternate-versions:
+      - "dev"
       - "latest"
       x-cached-seconds: 3600
   /corporations/{corporation_id}/assets/:
@@ -970,6 +1098,80 @@ definitions:
         description: "Unauthorized message"
     title: "Unauthorized"
     description: "Unauthorized model"
+  get_characters_character_id_ok:
+    required:
+    - "birthday"
+    - "bloodline_id"
+    - "corporation_id"
+    - "gender"
+    - "name"
+    - "race_id"
+    properties:
+      alliance_id:
+        type: "integer"
+        format: "int32"
+        description: "The character's alliance ID"
+        title: "get_characters_character_id_alliance_id"
+      birthday:
+        type: "string"
+        format: "date-time"
+        description: "Creation date of the character"
+        title: "get_characters_character_id_birthday"
+      bloodline_id:
+        type: "integer"
+        format: "int32"
+        description: "bloodline_id integer"
+        title: "get_characters_character_id_bloodline_id"
+      corporation_id:
+        type: "integer"
+        format: "int32"
+        description: "The character's corporation ID"
+        title: "get_characters_character_id_corporation_id"
+      description:
+        type: "string"
+        description: "description string"
+        title: "get_characters_character_id_description"
+      faction_id:
+        type: "integer"
+        format: "int32"
+        description: "ID of the faction the character is fighting for, if the character\
+          \ is enlisted in Factional Warfare"
+        title: "get_characters_character_id_faction_id"
+      gender:
+        type: "string"
+        description: "gender string"
+        title: "get_characters_character_id_gender"
+        enum:
+        - "female"
+        - "male"
+      name:
+        type: "string"
+        description: "name string"
+        title: "get_characters_character_id_name"
+      race_id:
+        type: "integer"
+        format: "int32"
+        description: "race_id integer"
+        title: "get_characters_character_id_race_id"
+      security_status:
+        type: "number"
+        format: "float"
+        description: "security_status number"
+        title: "get_characters_character_id_security_status"
+        minimum: -10
+        maximum: 10
+      title:
+        type: "string"
+        description: "The individual title of the character"
+        title: "get_characters_character_id_title"
+    description: "200 ok object"
+  get_characters_character_id_not_found:
+    properties:
+      error:
+        type: "string"
+        description: "Not found message"
+        title: "get_characters_character_id_404_not_found"
+    description: "Not found"
   get_characters_character_id_assets_200_ok:
     required:
     - "is_singleton"
@@ -1861,7 +2063,9 @@ parameters:
     - "fr"
     - "ja"
     - "ru"
+    - "zh"
     - "ko"
+    - "es"
   If-None-Match:
     name: "If-None-Match"
     in: "header"
@@ -1912,7 +2116,9 @@ parameters:
     - "fr"
     - "ja"
     - "ru"
+    - "zh"
     - "ko"
+    - "es"
   page:
     name: "page"
     in: "query"
